fix: fix progressBar z-index

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -35,7 +35,7 @@
   height: 5px;
   background: #c6ff00;
   transform-origin: 0%;
-  z-index: 40;
+  z-index: 50;
 }
 
 
